--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-重新建立一个新的网站，哈哈哈哈哈h
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>古诗一首</title>
+</head>
+<body>
+<h1>《静夜思》</h1>
+<p>床前明月光，</p>
+<p>疑是地上霜。</p>
+<p>举头望明月，</p>
+<p>低头思故乡。</p>
+</body>
+</html>
